	src/net/charserverhandler.cpp, src/net/network.cpp, src/main.h: Fixed
	selection of player character and implemented sending of game and chat
	server tokens. It gets you in the game (or what's left of it), but not
	on any map yet.
	* src/net/*: Changed MessageHandler::handleMessage to take a reference
	instead of a pointer. Removed unused Packet class. Added stub for
	handling GPMSG_BEING_ENTER.

2006-08-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/net/network.h, src/net/network.cpp: Removed
	incoming packets queue. Messages are now processed as they come in.

2006-08-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/char_select.cpp, src/net/charserverhandler.h,
	src/net/charserverhandler.cpp: Some preparations towards supporting
	character select and response handling.
	* src/net/charserverhandler.cpp: Fixed typo and forgetting to add
	APMSG_CHAR_SELECT_RESPONSE to the list of handled messages.

2006-08-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/net/charserverhandler.h, src/net/charserverhandler.cpp: Fix
	warning about jump to case label crossing an initialization.
	* src/gui/vbox.cpp: Use std::list#empty since it is more efficient as
	pointed out by doener.

2006-08-14  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/being.cpp, src/being.h, src/gui/char_select.cpp,
	src/gui/char_select.h, src/gui/playerbox.cpp, src/gui/playerbox.h,
	src/gui/status.cpp, src/gui/status.h, src/localplayer.cpp,
	src/localplayer.h, src/main.cpp, src/net/buysellhandler.cpp,
	src/net/charserverhandler.cpp, src/net/loginhandler.cpp,
	src/net/loginhandler.h, src/net/messageout.cpp, src/net/messageout.h,
	src/net/network.cpp, src/net/network.h, src/net/playerhandler.cpp,
	src/net/protocol.h: Completed porting of character creation/deletion,
	fixed some issues with network code.

2006-08-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/player.cpp: Verify the gender to prevent crashing when something
	is wrong with the communication.
