@@ -31,7 +31,12 @@ class PlayerHandler : public MessageHandler
     public:
         PlayerHandler();
 
-        void handleMessage(MessageIn &msg);
+        void
+        handleMessage(MessageIn &msg);
+
+    private:
+        void
+        handleMapChangeMessage(MessageIn &msg);
 };
 
 #endif
